# ASURA

./: CLAUDE.local.md  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/rules/: autopilot.md
align/: align_pptx_to_pdf.py  build_pdf_index.py  judge_with_ollama.py
docs/specs/: athra_pdf_extractor.md
input/10patern/: A2.pptx  A3.pptx  D1.pptx  E1.pptx  E4.pptx
input/templates_spec/: A1.json  A2.json  A3.json  B1.json  C1.json  D1.json  D2.json  E1.json  E2.json  E4.json
runs/: agent_journal.md
runs/athra_shutsugenmoto/: debug.html  extraction.json  report.json  repro_check.json  run_all.py
runs/athra_test/: debug.html  extraction.json  report.json
runs/pptx_extract_test/: A1_dom_alpha.pptx  athra_debug.html  blueprint.json  extraction.json  output.pptx  output_dom_align_fixed.pptx  output_dom_fixed3.pptx  output_dom_vanchor_alpha_fixed.pptx  template.json
runs/pptx_extract_test/10patern_output_dom/: A1_dom.pptx  A1_dom_alpha_from_src.pptx  A2_dom.pptx  A3_dom.pptx  B1_dom.pptx  C1_dom.pptx  D1_dom.pptx  D2_dom.pptx  E1_dom.pptx  E2_dom.pptx  E4_dom.pptx
runs/pptx_extract_test/10patern_pptx/: A1.json  C1.json  E4.json
runs/pptx_extract_test/10patern_runs/A1/: blueprint.json  source.pptx
runs/pptx_extract_test/10patern_runs/A2/: blueprint.json  (+1 more)
runs/pptx_extract_test/A1_run/: blueprint.json  extraction.json  source.pptx
runs/run_dev_0001/: blueprint.json  extraction.json
runs/sample/: extraction.json  output.pptx  output2.pptx  runlog.json
scripts/: diag_alpha_tags.py  diag_images.py  inspect_pptx.py
src/asura/: __init__.py
(+42 files in other folders)
